updates to kisi, kurum, proje, bagis pages

--- a/app/views/admin/pages.html.erb
+++ b/app/views/admin/pages.html.erb
@@ -27,9 +27,9 @@
                 <%=truncate(page.description, :length => 200) %>
               </div>
 
-              <div class="progress-bar-container clearfix">
+              <div class="size1of2-bar-container clearfix">
 
-                <div class="progress-bar rc clearfix">
+                <div class="size1of2-bar rc clearfix">
                   <div class="pb-value rc" style="width: <%=page.collect_ratio_str%>%;">
                     <div class="pb-reflection rc"></div>
                     <div class="pb-hedef">HEDEF: <b><%= page.goal_str %> TL</b></div>
@@ -42,7 +42,7 @@
                     </div>
                   </div>
                 </div>
-              </div><!-- end of .progress-bar-container -->
+              </div><!-- end of .size1of2-bar-container -->
             </div>
           </div>
         <% end %>
