--- a/app/views/home/bagis_sayfasi.html.erb
+++ b/app/views/home/bagis_sayfasi.html.erb
@@ -15,7 +15,7 @@
           </div>
         </div><!-- .comment-bubble -->
         
-        <div class="progress-bar"></div>
+        <div class="size1of2-bar"></div>
         <a href="#" class="yellow button super no-margin">Bağış Yap</a>
         
         
