--- a/app/views/pages/_share_options.erb
+++ b/app/views/pages/_share_options.erb
@@ -1,14 +1,41 @@
 <div id="fb-root"></div>
 
+
+
 <div class="share-options">
+  <h3>Paylaşarak Destek Ol!</h3>
   <ul class="clearfix">
-    <li><a href="http://twitter.com/share?via=ben_varim" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>">Tweet</a></li>
-    <li style="margin-right: 10px"><span  class='st_email_hcount' displayText='Email'></span></li>
-    <li style="width:60px; margin-right: 10px"><g:plusone size="medium"></g:plusone></li>
-    <% if @show_fb_like_send %>
-      <li><fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like></li>
-    <% else %>
-      <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
-    <% end %>
+
+
+      <li>
+        <div class="fb-like" data-send="true" data-layout="box_count" data-show-faces="true"></div>
+      </li>
+
+
+    <li>
+      <a href="http://twitter.com/share?via=ben_varim"
+         class="twitter-share-button"
+         data-count="vertical"
+         data-text="<%= @page.title %>">Tweetle</a>
+    </li>
+
+
+
+    <li>
+      <!-- Place this tag where you want the +1 button to render -->
+      <g:plusone size="tall"></g:plusone>
+
+    </li>
+
+
+    <li>
+      <span  class='st_email_vcount' displayText='Email'></span>
+    </li>
+
+
+
   </ul>
+
+
+
 </div>
