replace public url

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -80,7 +80,7 @@
 Bv = {};
 Bv.Config = {
   Search : {
-    publicApiUrl : "<%=ENV['INDEXTANK_PUBLIC_URL']%>",
+    publicApiUrl : "<%=ENV['SEARCHIFY_PUBLIC_URL']%>",
     indexName : "<%=BvSearch.get_default_index_name%>"
   }
 };
