--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -54,7 +54,7 @@
       }
       var script = document.createElement('script');
       script.type = 'text/javascript';
-      script.src = '/jquery.form-n-validate.js';
+      script.src = '/javascripts/jquery.form-n-validate.js';
       head.appendChild(script);
       var err_style = '';
       try{
