--- a/app/views/admin/organizations.html.erb
+++ b/app/views/admin/organizations.html.erb
@@ -16,7 +16,7 @@
                       Paypal Hesabı: <%=label_tag organization.paypal_info.paypal_user%></br>
                       Kurum Aktif: <%=check_box_tag :active, "1", organization.active%><br/>
                     <% else %>
-                      <a href="javascript:alert('insallah bir gun :)');return false;">Paypal Bilgilerini Gir</a><br/>
+                      <a href="javascript:alert('insallah bir gun :)');return false;">Paypal Bilgilerini Gir</a> | <%=link_to "Paypal EC Ayarları", admin_paypal_ec_path(organization)%><br/>
                     <% end %>
                     Kurum Gizli: <%=check_box_tag :hidden, "1", organization.hidden%><br/>
                     Kurum Sahibi: <div id="org-user-<%=organization.id%>"><%=link_to organization.user.name, organization.user%> | <a class="change-org-user" org-id="<%=organization.id%>">Değiştir</a></div>
@@ -40,9 +40,7 @@
                   <tr>
                     <td>(kontakt) E-posta:</td><td><%=organization.contact_email%></td></tr>
                 </table>
-
               </p>
-
               <p><%= link_to 'Görüntüle', organization %></p>
               <% if (defined? show_edit_link) && show_edit_link %>
                 <p><%= link_to 'Düzenle', edit_project_path(organization) %></p>
